改变版本文件存放位置

--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,13 @@ test/tmp
 test/version_tmp
 tmp
 data/backup
-data/version
 data/temporary
 data/test_area
 data/db_out_area
 export/template
 export/migrate_config
 export/testdata
+version
 QY
 
 
